[tool.poetry]
name = "goit-web-hw-05"
version = "0.1.0"
description = ""
authors = ["dimaklymenko <dimaliar228@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
aiohttp = "^3.11.10"
websockets = "^14.1"
aiofile = "^3.9.0"
aiopath = "^0.7.7"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
